package model;

public class GeneralSubtask extends SubTask {

    public GeneralSubtask(String title) {
        super(title);
    }
}
